# Downsampling-a-PointCloud-using-a-VoxelGrid-filter

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  VoxelGridFilter.cpp  vcpkg.json
include/: PointCloudProcessor.h  Visualizer.h
src/: NormalEstimation  PointCloudProcessor.cpp  Visualizer.cpp  main.cpp  matrix_transform.cpp
